[package]
name = "rqlite"
version = "0.1.0"
edition = "2018"
description = "An async implementation of a rqlite client"
authors = ["zesty <zesty@mail.onion.bbox.wtf>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://codeberg.org/zesty/rqlite-rs"
homepage = "https://codeberg.org/zesty/rqlite-rs"
documentation = "https://docs.rs/rqlite/"

categories = ["async", "database"]
keywords   = ["rqlite"]


[dependencies]
tokio = { version = "1.12.0", features = [ "full" ] }
tokio-native-tls = "0.3.0"
hyper = { version = "0.14.14", features = [ "full" ] }
bytes = "1.1.0"
serde = { version = "1.0.126", features = [ "derive" ] }
serde_json = "1.0.64" 
base64 = "0.13.0"
